--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,4 @@
 spring:
-  application:
-    name: mercury-auth
   datasource:
     url: ${DB_URL:jdbc:mysql://localhost:3306/mercury_auth_new?useSSL=false&serverTimezone=UTC}
     username: ${DB_USERNAME:root}
@@ -11,14 +9,15 @@ spring:
     port: ${REDIS_PORT:6379}
     database: 0
   mail:
-    host: ${MAIL_HOST:smtp.example.com}
-    port: ${MAIL_PORT:25}
-    username: ${MAIL_USERNAME:user}
-    password: ${MAIL_PASSWORD:pass}
+    from: "no-reply@example.com"
+    host: smtp.example.com
+    port: 25
+    username: user
+    password: pass
     properties:
       mail:
         smtp:
-          auth: false
+          auth: true
           starttls:
             enable: false
 
@@ -58,9 +57,6 @@ security:
   captcha:
     threshold: 3
     ttl-minutes: 5
-
-mail:
-  from: ${MAIL_FROM:no-reply@example.com}
 
 # Swagger/OpenAPI configuration - DISABLED in production for security
 springdoc:
